# UMA-tools

./: LICENSE  README.md  config.json  environment_1_3.yaml  environment_2.yaml  environment_uma.yml  environment_uma_fia.yml  environment_uma_new.yml  environment_uma_original.yaml  environment_uma_test.yml  input_paths.json  nuclei_layers.json  pyproject.toml  uma_environment.yml
CODE/: UMA-FA.py  UMA-MI-1-units_quality_control.R  UMA-UC.py  units_quality_control.R
UMA-MI/CODE/: units_quality_control.R
code/: 1_nla_fiji_channel_extraction.py  2_nla_stardist_prediction.py  3_nla_fiji_calculation.py  SHG1_lif-to-tif.py  SHG2_intensity_assay.py  SHG3_orientation_assay.py  UMA-MI-2-Marker_intensity_analysis_pSMAD_pFAK_GS_PALLD.R  alignment_analysis.py  alignment_analysis_original_approach.py  fibronectin_orientation_analysis.py  nla_config_loader.py  nuclei_layers_analysis.py  nuclei_layers_analysis_three_modes.py  stardist_workflow_FINAL.py  thickness_analysis.py  units_quality_control.R
code1/: UMA-UC.py  alignment_analysis_original_approach.py  stardist_workflow_apr18.py
data/orig_excel_data/: Cukierman_TL_GS_ptCufar_pl09242024_pl2298_SITE.xlsx  Cukierman_TL_pFAK_ptCufar_pl09242024_pl2297_SITE.xlsx  Cukierman_TL_pSMAD_ptCufar_pl09242024_pl2296_SITE.xlsx
data/orig_txt_data/: Cukierman_TL_GS_ptCufar_pl09242024_pl2298_SITE.txt
stardist_models_nuclei_layers/stardist-1024-v3/: config.json
stardist_models_nuclei_layers/stardist-256-v3/: config.json
stardist_models_nuclei_layers/stardist-512-v3-2/: config.json  thresholds.json
(+28 files in other folders)
