[project]
name = "uma-tools"
version = "0.1.0"
description = "Automated, headless workflows for fibroblast/ECM unit confocal data"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "imagej>=0.3.2",
    "matplotlib>=3.10.5",
    "numpy==1.24",
    "orientationpy>=0.3.0",
    "pandas>=2.1.0",
    "pyimagej==1.5.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "scyjava==1.10.0",
    "setuptools<81",
    "stardist>=0.9.1",
    "tensorflow==2.14.1",
]
